# qurankit

./: .gitignore  DATASET_INFO.md  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
qurankit/: __init__.py  config.py  core.py
qurankit/data/: sample.json
tests/: test_basic.py
