[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qurankit"
version = "0.4.0"
description = "A query-first Python toolkit for Quranic text, morphology, translations, tafsir, and pattern discovery."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Faisal Alshargi", email = "alshargi.de@gmail.com" }
]
keywords = [
  "quran",
  "arabic",
  "nlp",
  "morphology",
  "roots",
  "lemmas",
  "translations",
  "islamic-studies"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Linguistic"
]
dependencies = []

[project.urls]
Homepage = "https://sanaa.ai"
Repository = "https://github.com/alshargi/qurankit"
Documentation = "https://sanaa.ai/qurankit"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
qurankit = ["data/sample.json"]
